--- a/src/App.css
+++ b/src/App.css
@@ -5,38 +5,59 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.webcam-container {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+select {
+  margin-bottom: 10px;
+  padding: 5px;
+  font-size: 16px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.webcam {
+  width: 80%;
+  max-width: 600px;
+  border: 2px solid #61dafb;
+  border-radius: 10px;
 }
 
-.card {
-  padding: 2em;
+.webcam-container {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.read-the-docs {
-  color: #888;
+select {
+  margin-bottom: 10px;
+  padding: 5px;
+  font-size: 16px;
+}
+
+.video-overlay-container {
+  position: relative;
+  width: 80%;
+  max-width: 600px;
+}
+
+.webcam {
+  width: 100%;
+  border: 2px solid #61dafb;
+  border-radius: 10px;
+}
+
+.overlay-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 230px;
+  height: 230px;
+  background-color: rgba(0, 255, 0, 0.5); /* Cuadrado verde semitransparente */
+  transform: translate(-50%, -50%);
+  border: 2px solid green; /* Borde verde sólido */
+  border-radius: 5px;
 }
